syntax = "proto3";
package proto;

option optimize_for = SPEED;
option go_package = "github.com/leophys/userz/proto";

message UserData {
  optional string first_name = 1;
  optional string last_name = 2;
  string nick_name = 3;
  string password = 4;
  string email = 5;
  optional string country = 6;
}

message User {
  string id = 1;
  optional string first_name = 2;
  optional string last_name = 3;
  string nick_name = 4;
  string password = 5;
  string email = 6;
  optional string country = 7;
  optional string created_at = 8;
  optional string updated_at = 9;
}

message AddRequest {
  string service_origin = 1;
  UserData data = 2;
}

message AddResponse { string id = 1; }

message UpdateRequest {
  string service_origin = 1;
  string id = 2;
  UserData data = 3;
}

message UpdateResponse { optional User user = 1; }

message RemoveRequest {
  string service_origin = 1;
  string id = 2;
}

message RemoveResponse { optional User user = 1; }

message ListRequest {
  string service_origin = 1;
  map<string, string> filter = 2;
  int64 page_size = 3;
}

message ListResponse { repeated User users = 1; }

service Userz {
  rpc Add(AddRequest) returns (AddResponse);
  rpc Update(UpdateRequest) returns (UpdateResponse);
  rpc Remove(RemoveRequest) returns (RemoveResponse);
  rpc List(ListRequest) returns (stream ListResponse);
}
